[package]
name = "tcfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
petgraph = "0.6.5"
serde = { version = "1.0.203", features = ["derive"] }
